Fix contact error on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ form {
   .col__form {
     width: auto;
     margin-bottom: 0px;
-    display: none;
+    
   }
 }
 
